--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,5 +6,9 @@
 }
 
 .bye {
-  color: blue;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 4px;
 }
